Fix overlapping stuff

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -474,7 +474,7 @@ html, body {
   justify-content: right;
   height: 1.25rem;
   width: calc(100% - 1.5rem);
-  position: absolute;
+  position: static;
   z-index: 1000;
   font-size: 1rem;
   opacity: 0.7;
